Puse en mayusculas unas letras
por que puedo

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -19,7 +19,7 @@
                     <div class="imagenHead"><h1 class="mainTitle">Cats 4u</h1></div>
                     <div class="cajaLinks">
                         <a class="seleccionado link" href="index.html"><span>Inicio</span></a>
-                        <a class="link" href="fotosDeGatos.html"><span >Fotos de gatos</span></a>
+                        <a class="link" href="fotosDeGatos.html"><span >Fotos De Gatos</span></a>
                         <a class="link" href="razas.html"><span >Razas</span></a>
                         <a class="link" href="curiosidades.html"><span >Curiosidades</span></a>  
                     </div>
