Un commit de prueba para mi curso

--- a/HTML/razas.html
+++ b/HTML/razas.html
@@ -57,7 +57,7 @@
                 <img src="https://www.webconsultas.com/sites/default/files/styles/wc_adaptive_image__small/public/temas/gato_persa.jpg" alt="">
             </div>
             <div class="descripcionRaza">
-                <h2>Gato persa</h2>
+                <h2>Gato Persa</h2>
                 <p>El Persa es una raza de gato caracterizada por tener una cara ancha y plana y un gran abundante pelaje de variados colores. Son considerados comúnmente como gatos aristocráticos.</p>
             </div>
         </div>
