--- a/HTML/index.html
+++ b/HTML/index.html
@@ -27,9 +27,9 @@
                 <nav class="rightNav">
                     <div class="cajaRedesSociales">
                         <span class="textoRedesSociales">Redes Sociales:</span>
-                        <a href="#facebook"><img class="iconosRedesSociales" src="../Imagenes/facebook.png" alt=""></a>
-                        <a href="#instagram"><img class="iconosRedesSociales" src="../Imagenes/instagram.png" alt=""></a>
-                        <a href="#twitter"><img class="iconosRedesSociales" src="../Imagenes/twitter.png" alt=""></a>
+                        <a href="#facebook"><img class="iconosRedesSociales" src="https://i.imgur.com/DaX10eZ.png" alt=""></a>
+                        <a href="#instagram"><img class="iconosRedesSociales" src="https://i.imgur.com/hZb60U5.png" alt=""></a>
+                        <a href="#twitter"><img class="iconosRedesSociales" src="https://i.imgur.com/w5AFf1W.png" alt=""></a>
                     </div>
                 </nav>  
             </div>
