Sustituyendo las imagenes, las puse todas en remoto para no guardarlas en GitHub, ya que es mala practica

--- a/HTML/razas.html
+++ b/HTML/razas.html
@@ -18,7 +18,7 @@
                 <div class="imagenHead"><h1 class="mainTitle">Cats 4u</h1></div>
                 <div class="cajaLinks">
                     <a class="link" href="index.html"><span>Inicio</span></a>
-                    <a class="link" href="fotosDeGatos.html"><span >Fotos de gatos</span></a>
+                    <a class="link" href="fotosDeGatos.html"><span >Fotos De Gatos</span></a>
                     <a class="seleccionado link" href="razas.html"><span >Razas</span></a>
                     <a class="link" href="curiosidades.html"><span >Curiosidades</span></a>  
                 </div>
@@ -26,9 +26,9 @@
             <nav class="rightNav">
                 <div class="cajaRedesSociales">
                     <span class="textoRedesSociales">Redes Sociales:</span>
-                    <a href="#facebook"><img class="iconosRedesSociales" src="../Imagenes/facebook.png" alt=""></a>
-                    <a href="#instagram"><img class="iconosRedesSociales" src="../Imagenes/instagram.png" alt=""></a>
-                    <a href="#twitter"><img class="iconosRedesSociales" src="../Imagenes/twitter.png" alt=""></a>
+                    <a href="#facebook"><img class="iconosRedesSociales" src="https://i.postimg.cc/43mR3Hbh/facebook.png" alt=""></a>
+                    <a href="#instagram"><img class="iconosRedesSociales" src="https://i.postimg.cc/4N5DbQW9/instagram.png" alt=""></a>
+                    <a href="#twitter"><img class="iconosRedesSociales" src="https://i.postimg.cc/YqMcWsz7/twitter.png" alt=""></a>
                 </div>
             </nav>  
         </div>
