--- a/HTML/index.html
+++ b/HTML/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="../CSS/normalize.css">
     <link rel="stylesheet" href="../CSS/style.css">
     <link rel="stylesheet" href="../CSS/index.css">
-    <link rel="shortcut icon" href="../Imagenes/Icono.png" type="image/x-icon">
+    <link rel="shortcut icon" href="https://i.postimg.cc/2j4R3DvT/Icono.png" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP&family=Roboto:wght@500&display=swap" rel="stylesheet">
 </head>
@@ -27,9 +27,9 @@
                 <nav class="rightNav">
                     <div class="cajaRedesSociales">
                         <span class="textoRedesSociales">Redes Sociales:</span>
-                        <a href="#facebook"><img class="iconosRedesSociales" src="https://i.imgur.com/DaX10eZ.png" alt=""></a>
-                        <a href="#instagram"><img class="iconosRedesSociales" src="https://i.imgur.com/hZb60U5.png" alt=""></a>
-                        <a href="#twitter"><img class="iconosRedesSociales" src="https://i.imgur.com/w5AFf1W.png" alt=""></a>
+                        <a href="#facebook"><img class="iconosRedesSociales" src="https://i.postimg.cc/43mR3Hbh/facebook.png" alt=""></a>
+                        <a href="#instagram"><img class="iconosRedesSociales" src="https://i.postimg.cc/4N5DbQW9/instagram.png" alt=""></a>
+                        <a href="#twitter"><img class="iconosRedesSociales" src="https://i.postimg.cc/YqMcWsz7/twitter.png" alt=""></a>
                     </div>
                 </nav>  
             </div>
