--- a/HTML/curiosidades.html
+++ b/HTML/curiosidades.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="../CSS/normalize.css">
     <link rel="stylesheet" href="../CSS/style.css">
     <link rel="stylesheet" href="../CSS/curiosidades.css">
-    <link rel="shortcut icon" href="../Imagenes/Icono.png" type="image/x-icon">
+    <link rel="shortcut icon" href="https://i.postimg.cc/2j4R3DvT/Icono.png" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP&family=Roboto:wght@500&display=swap" rel="stylesheet">
 </head>
