Posible layout para curiosidades

--- a/HTML/curiosidades.html
+++ b/HTML/curiosidades.html
@@ -33,67 +33,20 @@
             </nav>  
         </div>
     </header>  
-    <div class="cajaPantalla">
-        <div class="contenedor">
-            <div class="cajaCuriosidad">
-                <h3 class="tituloCuriosidad">
-                    Curiosidad Numero #
-                </h3>
-                <div class="curiosidadTexto">
-                    
-                </div>
-            </div>
-        </div>
-        <div class="contenedor">
-            <div class="cajaCuriosidad">
-                <h3 class="tituloCuriosidad">
-                    Curiosidad Numero #
-                </h3>
-                <div class="curiosidadTexto">
+    <main>
+        <aside class="left-aside">
+            <div class="left-aside__box"></div>
+            <div class="left-aside__box"></div>
+            <div class="left-aside__box"></div>
+            <div class="left-aside__box"></div>
+        </aside>
+        <section class="right-section">
+            
+        </section>
+    </main>
 
-                </div>
-            </div>
-        </div>
-        <div class="contenedor">
-            <div class="cajaCuriosidad">
-                <h3 class="tituloCuriosidad">
-                    Curiosidad Numero #
-                </h3>
-                <div class="curiosidadTexto">
-
-                </div>
-            </div>
-        </div>
-        <div class="contenedor">
-            <div class="cajaCuriosidad">
-                <h3 class="tituloCuriosidad">
-                    Curiosidad Numero #
-                </h3>
-                <div class="curiosidadTexto">
-
-                </div>
-            </div>
-        </div>
-        <div class="contenedor">
-            <div class="cajaCuriosidad">
-                <h3 class="tituloCuriosidad">
-                    Curiosidad Numero #
-                </h3>
-                <div class="curiosidadTexto">
-
-                </div>
-            </div>
-        </div>
-        <div class="contenedor">
-            <div class="cajaCuriosidad">
-                <h3 class="tituloCuriosidad">
-                    Curiosidad Numero #
-                </h3>
-                <div class="curiosidadTexto">
-
-                </div>
-            </div>
-        </div>
-    </div>
+    <footer class="footer">
+        <p>copyright&copy; by:Guillermo Farfan Bivanco </p>
+    </footer>
     </body>
 </html>
